# leaf-lang

./: .gitignore  README.md  logo.xcf
generator-test/: CMakeLists.txt  docs.txt  main.cpp  parser.cpp  parser.hpp
generator-test/compilation/: compilation_unit.cpp  compilation_unit.hpp  conversion_solver.hpp  method_builder.hpp  method_call_solver.hpp  utility.cpp  utility.hpp  yaoosl_compiler.cpp  yaoosl_compiler.hpp  yaoosl_library_wrapper.hpp  yaoosl_reporting.hpp
generator-test/compilation-old/: compiler.cpp  library_wrapper.cpp  value_reference.hpp
generator-test/compilation-old/builders/: alias_declaration.hpp  encapsulated_alias_declaration.hpp  field_builder.cpp  file_builder.cpp  file_builder.hpp  method_builder.cpp  method_builder.hpp  property_builder.cpp  property_builder.hpp  template_definition_item.hpp  type_builder.hpp
generator-test/compilation-old/stages/: 0_register_types.hpp  1_register_contents.cpp  1_register_contents.hpp  2_set_type_size.cpp  2_set_type_size.hpp  3_emit_bytecode.cpp  3_emit_bytecode.hpp  stage_base.hpp
generator-test/compilation-old/visitors/: type_from_expression.hpp
generator-test/compilation/builders/: class_builder.cpp  class_builder.hpp  encapsulation_enum.hpp  field_builder.hpp  type_builder.cpp  type_candidate.hpp  variable_declaration.hpp
generator-test/compilation/cst/: ast_type_builder.cpp  ast_type_builder.hpp  ast_type_reference.cpp  ast_type_reference.hpp  compilation_unit.cpp  compilation_unit.hpp  walker_alias.cpp  walker_alias.hpp  walker_attribute.cpp  walker_attribute.hpp  walker_attribute_item.cpp  walker_attribute_item.hpp  walker_class.cpp  walker_class.hpp  walker_constant.cpp  walker_constant.hpp  walker_contract.cpp  walker_contract.hpp  walker_conversion.hpp  walker_field.hpp  walker_main.cpp  walker_main.hpp  walker_method.hpp  walker_namespace.cpp  walker_namespace.hpp  walker_property.hpp  walker_type_match.cpp  walker_type_match.hpp
generator-test/compilation/data/: pragma.hpp  using.hpp
generator-test/compilation/data/ast/: type.cpp  type.hpp
generator-test/compilation/stages/: 0_register_types.cpp  1_register_contents.cpp  2_set_type_size.hpp  stage_base.cpp  stage_base.hpp
generator-test/compilation/visitors/: type_from_expression.cpp
generator-test/compilation/walkers/: walker_alias.hpp  walker_class.cpp  walker_class.hpp  walker_contract.hpp  walker_conversion.cpp  walker_conversion.hpp  walker_field.cpp  walker_field.hpp  walker_main.cpp  walker_main.hpp  walker_method.cpp  walker_method.hpp  walker_namespace.cpp  walker_namespace.hpp  walker_property.cpp  walker_property.hpp
generator-test/corelib/: aliases.leaf  array.ys  bool.leaf  char.leaf  f32.ys  f64.leaf  i16.ys  i32.leaf  i64.ys  i8.ys  module.trunk  reference.ys  string.leaf  ui16.ys  ui32.leaf  ui64.leaf  ui8.leaf
generator-test/runtime/: leaf_emit.h  leaf_library.h  leaf_macros.h  leaf_opcodes.h  leaf_string.h  yaoosl_library.c  yaoosl_string.c  yaoosl_type.c  yaoosl_type.h
syntax/: leaf.attribute.xcg  leaf.contract.xcg  leaf.control-structure.xcg  leaf.expression.xcg  leaf.higher-structure.xcg  leaf.other.xcg  leaf.template.xcg  leaf.type-match.xcg  leaf.type-navigation.xcg  leaf.xcg
